maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:5: error: not found: value tyttttttttttty
  tyttttttttttty)while(!estSurBiscuit)
  ^